# leoftp

./: .gitignore  Cargo.toml  README.md  stress.sh
common/: Cargo.toml  fuzz_all.sh
common/fuzz/: Cargo.toml
common/fuzz/fuzz_targets/: chunks_arbitrary.rs  chunks_e2e.rs  control_arbitrary.rs  control_e2e.rs  corrupt_transport_packets_arbitrary.rs  corrupt_transport_packets_e2e.rs  header_arbitrary.rs  header_e2e.rs
common/src/: binary_serialize.rs  chunks.rs  control.rs  file_part_id.rs  header.rs  lib.rs  substream.rs  tempdir.rs  transport_packet.rs  validity.rs
common/src/file_receiving/: mod.rs  store_manager.rs
common/src/file_sending/: managed_sending_file.rs  mod.rs  storage_manager.rs
common/src/file_sending/managed_sending_file/: mode.rs  state.rs
common/src/transport_packet/: checkpoint_stream.rs  hashing.rs  scrambling.rs  tolerant_parser.rs
docs/: ApplicationLayer.md
receiver/: Cargo.toml
receiver/src/: lib.rs  partial_file.rs
sender/: Cargo.toml
sender/src/: background_runner.rs  downlink_session.rs  input_folder.rs  lib.rs  managed_file.rs  ready_file.rs  ready_folder.rs  storage_manager.rs
sender/src/managed_file/: mode.rs  state.rs
sender/src/new/: background_runner.rs  downlink_session.rs  managed_file.rs  mod.rs  storage_manager.rs  tempdir.rs  vfs.rs
sender/src/new/managed_file/: state.rs
sender/src/new/vfs/: mock.rs
sender/src/ready_folder/: sender_loop.rs
tester/: Cargo.toml
tester/src/: byte_pipe.rs  main.rs  runner.rs
