[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.5.0", features = ["serde", "v4"] }
serde = { version = "1.0.190", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.108"
