[package]
name = "leoftp-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
serde = { version = "1.0.190", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.108"
tracing = "0.1.40"
arbitrary = { version = "1.3.2", features = ["derive"], optional = true }
twox-hash = "1.6.3"
chrono = "0.4.38"
num-traits = "0.2.19"
num-derive = "0.4.2"

[features]
fuzzing = ["arbitrary", "uuid/arbitrary"]
