[package]
name = "sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
chrono = "0.4.31"
crossbeam-channel = "0.5.8"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
xxhash-rust = { version = "0.8.7", features = ["xxh3"] }

common = { path = "../common" }
tracing = "0.1.40"
