[package]
name = "tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sender = { path = "../sender" }
receiver = { path = "../receiver" }
common = { path = "../common" }
crossbeam-channel = "0.5.8"
rand = "0.8.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
